[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/2.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.113725 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.145098 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.219608, 1, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.862745, 0.862745, 0.862745, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.992157, 1, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="UI" type="Control"]
anchor_right = 2.0
anchor_bottom = 2.0
script = ExtResource( 1 )

[node name="Fuel" type="Control" parent="."]
margin_left = 1600.0
margin_top = 875.0

[node name="PanelContainer" type="PanelContainer" parent="Fuel"]
margin_top = 18.0
margin_right = 38.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 3 )

[node name="PanelContainer2" type="PanelContainer" parent="Fuel"]
margin_top = 2.0
margin_right = 38.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 4 )

[node name="FuelBar" type="ProgressBar" parent="Fuel"]
margin_left = 11.0
margin_top = 100.0
margin_right = 87.0
margin_bottom = 116.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Fuel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 22.0
text = "FUEL"

[node name="Alt" type="Control" parent="."]
margin_left = 1775.0
margin_top = 880.0
margin_right = 1800.0
margin_bottom = 905.0

[node name="Alt" type="TextureProgress" parent="Alt"]
margin_left = -120.0
margin_top = -120.0
margin_right = 121.0
margin_bottom = 121.0
theme = SubResource( 5 )
value = 50.0
texture_progress = ExtResource( 2 )
fill_mode = 4

[node name="Name" type="Label" parent="Alt/Alt"]
margin_left = 85.0
margin_top = 92.0
margin_right = 154.0
margin_bottom = 106.0
text = "ALTIMETER"

[node name="Feet" type="Label" parent="Alt/Alt"]
margin_left = 100.0
margin_top = 134.0
margin_right = 140.0
margin_bottom = 148.0
text = "FEET"
align = 1

[node name="Alt_Number" type="Label" parent="Alt"]
margin_left = -20.0
margin_top = -6.0
margin_right = 20.0
margin_bottom = 8.0
text = "0"
align = 1

[node name="Speed" type="Control" parent="."]
margin_left = 140.0
margin_top = 880.0
margin_right = 245.0
margin_bottom = 930.0

[node name="Speed" type="TextureProgress" parent="Speed"]
margin_left = -120.0
margin_top = -120.0
margin_right = 121.0
margin_bottom = 121.0
theme = SubResource( 5 )
value = 50.0
texture_progress = ExtResource( 2 )
fill_mode = 4

[node name="Name" type="Label" parent="Speed/Speed"]
margin_left = 100.0
margin_top = 91.0
margin_right = 140.0
margin_bottom = 105.0
text = "SPEED"

[node name="Knot" type="Label" parent="Speed/Speed"]
margin_left = 100.0
margin_top = 134.0
margin_right = 140.0
margin_bottom = 148.0
text = "KTS"
align = 1

[node name="Speed_Number" type="Label" parent="Speed"]
margin_left = -20.0
margin_top = -6.0
margin_right = 20.0
margin_bottom = 8.0
text = "0"
align = 1

[node name="Points" type="Control" parent="."]
margin_left = 1550.0
margin_top = 875.0

[node name="PanelContainer" type="PanelContainer" parent="Points"]
margin_left = -4.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 3 )

[node name="PanelContainer2" type="PanelContainer" parent="Points"]
margin_left = -4.0
margin_top = 2.0
margin_right = 46.0
margin_bottom = 108.0
custom_styles/panel = SubResource( 4 )

[node name="PointsBar" type="ProgressBar" parent="Points"]
margin_left = 13.0
margin_top = 100.0
margin_right = 89.0
margin_bottom = 116.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="Points"]
margin_left = -3.0
margin_top = 4.0
margin_right = 45.0
margin_bottom = 18.0
text = "POINTS"
align = 1
